--- a/p8105_hw3_kpc2124.Rmd
+++ b/p8105_hw3_kpc2124.Rmd
@@ -7,24 +7,98 @@ output: github_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+
+library(tidyverse)
+library(viridis)
+
+knitr::opts_chunk$set(
+	echo = TRUE,
+	warning = FALSE,
+	fig.width = 8, 
+  fig.height = 6,
+  out.width = "90%"
+)
+
+options(
+  ggplot2.continuous.colour = "viridis",
+  ggplot2.continuous.fill = "viridis"
+)
+
+scale_colour_discrete = scale_colour_viridis_d
+scale_fill_discrete = scale_fill_viridis_d
+
+theme_set(theme_minimal() + theme(legend.position = "bottom"))
 ```
 
-## R Markdown
+# Problem 1
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+```{r, include = FALSE}
+library(p8105.datasets)
+data("instacart")
 ```
 
-## Including Plots
+The `instacart` data set has `r nrow(instacart)` observations and `r ncol(instacart)` variables, which gives `r nrow(instacart) * ncol(instacart)` distinct datapoints. Some key variables of this dataset are: **`r colnames(instacart)[1]`**, which ensures all items ordered are associated with the same order, **`r colnames(instacart)[5]`**, who placed the order, **`r colnames(instacart)[11]`**, what product was ordered, and **`r colnames(instacart)[15]`**, what department the product is from. The most orders made by a customer is **`r max(instacart[7])`**. The most popular item ordered is **`r names(which.max(table(instacart[11])))`**.
 
-You can also embed plots, for example:
+## Problem 1a: How many aisles are there, and which aisles are the most items ordered from?
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r}
+
+count_aisles = instacart %>%
+  distinct(aisle) %>% 
+  count()
+
+most_items_aisle = instacart %>% 
+  count(aisle) %>%
+  slice(which.max(n))
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+**There are `r pull(count_aisles,n)` aisles total. The aisle with the most items ordered is `r pull(most_items_aisle,aisle)` with a total of `r pull(most_items_aisle,n)` items ordered from that aisle.**
+
+## Problem 1b: Make a plot that shows the number of items ordered in each aisle, limiting this to aisles with more than 10000 items ordered. Arrange aisles sensibly, and organize your plot so others can read it.
+
+```{r}
+instacart %>% 
+  group_by(aisle) %>% 
+  mutate(freq = n()) %>% 
+  ungroup() %>% 
+  mutate(
+    aisle = as.factor(aisle),
+    aisle = fct_reorder(aisle, freq, na.rm = TRUE)
+  )  %>%
+  filter(freq > 10000) %>% 
+  select(aisle,freq,department) %>% 
+  distinct() %>% 
+  ggplot(aes(x = aisle, y = freq/1000, fill = department)) +
+  geom_col(position = "dodge") +
+  labs(
+    title = "Number of Items Ordered, By Aisle",
+    y = "Number of Items Ordered (in 1000s)",
+    x = "Aisle Name",
+    caption = "Data from the Instacart") +
+  theme(
+    axis.text.x = element_text(angle = 90),
+    legend.position = "right") + 
+  scale_fill_discrete(name = "Department Name") +
+  scale_y_continuous(
+  breaks = c(10,25,50,75,100,150), 
+  labels = c("10","25","50","75","100","150"))
+```
+
+**10,000+ items were ordered from 39 aisles out of the total 134 aisles. Out of these 39 aisles, the `butter` aisle had the least items ordered, while `fresh fruits` and `fresh vegetables` had over 150,000 items ordered, far surpassing the 3rd ranked aisle, which was `packaged vegetables fruits`, with 78,493 items ordered.**
+
+## Problem 1c: Make a table showing the three most popular items in each of the aisles “baking ingredients”, “dog food care”, and “packaged vegetables fruits”. Include the number of times each item is ordered in your table.
+
+```{r}
+
+```
+
+## Problem 1d: Make a table showing the mean hour of the day at which Pink Lady Apples and Coffee Ice Cream are ordered on each day of the week; format this table for human readers (i.e. produce a 2 x 7 table).
+
+```{r}
+
+```
+
+
+
+
+
