--- a/p8105_hw3_kpc2124.md
+++ b/p8105_hw3_kpc2124.md
@@ -3,6 +3,42 @@ Homework 3 - Visualization and EDA
 Kristi Chau
 10/5/2019
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 # Problem 1
 
 The `instacart` data set has 1384617 observations and 15 variables,
@@ -33,7 +69,7 @@ aisle.**
 ## Problem 1b: Make a plot that shows the number of items ordered in each aisle, limiting this to aisles with more than 10000 items ordered. Arrange aisles sensibly, and organize your plot so others can read it.
 
 ``` r
-instacart %>% 
+instacart_plot = instacart %>% 
   group_by(aisle) %>% 
   mutate(freq = n()) %>% 
   ungroup() %>% 
@@ -50,7 +86,7 @@ instacart %>%
     title = "Number of Items Ordered, By Aisle",
     y = "Number of Items Ordered (in 1000s)",
     x = "Aisle Name",
-    caption = "Data from the Instacart") +
+    caption = "Data from Instacart") +
   theme(
     axis.text.x = element_text(angle = 90),
     legend.position = "right") + 
@@ -58,6 +94,8 @@ instacart %>%
   scale_y_continuous(
   breaks = c(10,25,50,75,100,150), 
   labels = c("10","25","50","75","100","150"))
+
+instacart_plot
 ```
 
 <img src="p8105_hw3_kpc2124_files/figure-gfm/unnamed-chunk-3-1.png" width="90%" />
@@ -71,4 +109,536 @@ ordered.**
 
 ## Problem 1c: Make a table showing the three most popular items in each of the aisles “baking ingredients”, “dog food care”, and “packaged vegetables fruits”. Include the number of times each item is ordered in your table.
 
+``` r
+instacart %>%
+  group_by(aisle,product_name) %>%
+  filter(aisle %in% c("baking ingredients", "dog food care", "packaged vegetables fruits")) %>%
+  mutate(freq = n()) %>%
+  arrange(aisle,desc(freq)) %>%
+  distinct(aisle,product_name,freq) %>%
+  ungroup() %>% 
+  group_by(aisle) %>%
+  mutate(rank = dense_rank(desc(freq))) %>%
+  filter(rank %in% c(1,2,3)) %>%
+  select(aisle,rank,product_name,freq) %>% 
+  kable(
+    caption = "Most popular items in 'Baking Ingredients', 'Dog Food Care', and 'Packaged Vegetables Fruits' Aisles",
+    col.names = c("Aisle Name",
+                  "Ranking",
+                  "Product Name",
+                  "Number of Items Purchased"))
+```
+
+<table>
+
+<caption>
+
+Most popular items in ‘Baking Ingredients’, ‘Dog Food Care’, and
+‘Packaged Vegetables Fruits’ Aisles
+
+</caption>
+
+<thead>
+
+<tr>
+
+<th style="text-align:left;">
+
+Aisle Name
+
+</th>
+
+<th style="text-align:right;">
+
+Ranking
+
+</th>
+
+<th style="text-align:left;">
+
+Product Name
+
+</th>
+
+<th style="text-align:right;">
+
+Number of Items Purchased
+
+</th>
+
+</tr>
+
+</thead>
+
+<tbody>
+
+<tr>
+
+<td style="text-align:left;">
+
+baking ingredients
+
+</td>
+
+<td style="text-align:right;">
+
+1
+
+</td>
+
+<td style="text-align:left;">
+
+Light Brown Sugar
+
+</td>
+
+<td style="text-align:right;">
+
+499
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+baking ingredients
+
+</td>
+
+<td style="text-align:right;">
+
+2
+
+</td>
+
+<td style="text-align:left;">
+
+Pure Baking Soda
+
+</td>
+
+<td style="text-align:right;">
+
+387
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+baking ingredients
+
+</td>
+
+<td style="text-align:right;">
+
+3
+
+</td>
+
+<td style="text-align:left;">
+
+Cane Sugar
+
+</td>
+
+<td style="text-align:right;">
+
+336
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+dog food care
+
+</td>
+
+<td style="text-align:right;">
+
+1
+
+</td>
+
+<td style="text-align:left;">
+
+Snack Sticks Chicken & Rice Recipe Dog Treats
+
+</td>
+
+<td style="text-align:right;">
+
+30
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+dog food care
+
+</td>
+
+<td style="text-align:right;">
+
+2
+
+</td>
+
+<td style="text-align:left;">
+
+Organix Chicken & Brown Rice Recipe
+
+</td>
+
+<td style="text-align:right;">
+
+28
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+dog food care
+
+</td>
+
+<td style="text-align:right;">
+
+3
+
+</td>
+
+<td style="text-align:left;">
+
+Small Dog Biscuits
+
+</td>
+
+<td style="text-align:right;">
+
+26
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+packaged vegetables fruits
+
+</td>
+
+<td style="text-align:right;">
+
+1
+
+</td>
+
+<td style="text-align:left;">
+
+Organic Baby Spinach
+
+</td>
+
+<td style="text-align:right;">
+
+9784
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+packaged vegetables fruits
+
+</td>
+
+<td style="text-align:right;">
+
+2
+
+</td>
+
+<td style="text-align:left;">
+
+Organic Raspberries
+
+</td>
+
+<td style="text-align:right;">
+
+5546
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+packaged vegetables fruits
+
+</td>
+
+<td style="text-align:right;">
+
+3
+
+</td>
+
+<td style="text-align:left;">
+
+Organic Blueberries
+
+</td>
+
+<td style="text-align:right;">
+
+4966
+
+</td>
+
+</tr>
+
+</tbody>
+
+</table>
+
+**The 3 most popular `Baking Ingredients` items are `Light Brown Sugar`,
+`Pure Baking Soda`, and `Cane Sugar`. The 3 most popular `Dog Food Care`
+items are `Snack Sticks Chicken & Rice Recipe Dog Treats` `Organix
+Chicken & Brown Rice Recipe`, and `Small Dog Biscuits`. The 3 most
+popular `Packaged Vegetables Fruits` items are `Organic Baby Spinach`,
+`Organic Raspberries`, and `Organic
+Blueberries`.**
+
 ## Problem 1d: Make a table showing the mean hour of the day at which Pink Lady Apples and Coffee Ice Cream are ordered on each day of the week; format this table for human readers (i.e. produce a 2 x 7 table).
+
+``` r
+instacart %>%
+  select(product_name,order_dow,order_hour_of_day) %>%
+  filter(product_name %in% c("Pink Lady Apples","Coffee Ice Cream")) %>%
+  group_by(product_name,order_dow) %>%
+  mutate(mean_hod = mean(order_hour_of_day)) %>% 
+  distinct(product_name,order_dow,mean_hod) %>%
+  arrange(order_dow) %>%
+  pivot_wider(
+    names_from = "order_dow",
+    values_from = "mean_hod"
+  ) %>%
+  kable(
+    caption = "Mean hour of the day, by day of the week, at which Pink Lady Apples and Coffee Ice Cream are ordered",
+    col.names = c("Product Name",
+                  "Sunday",
+                  "Monday",
+                  "Tuesday",
+                  "Wednesday",
+                  "Thursday",
+                  "Friday",
+                  "Saturday")
+  )
+```
+
+<table>
+
+<caption>
+
+Mean hour of the day, by day of the week, at which Pink Lady Apples and
+Coffee Ice Cream are ordered
+
+</caption>
+
+<thead>
+
+<tr>
+
+<th style="text-align:left;">
+
+Product Name
+
+</th>
+
+<th style="text-align:right;">
+
+Sunday
+
+</th>
+
+<th style="text-align:right;">
+
+Monday
+
+</th>
+
+<th style="text-align:right;">
+
+Tuesday
+
+</th>
+
+<th style="text-align:right;">
+
+Wednesday
+
+</th>
+
+<th style="text-align:right;">
+
+Thursday
+
+</th>
+
+<th style="text-align:right;">
+
+Friday
+
+</th>
+
+<th style="text-align:right;">
+
+Saturday
+
+</th>
+
+</tr>
+
+</thead>
+
+<tbody>
+
+<tr>
+
+<td style="text-align:left;">
+
+Pink Lady Apples
+
+</td>
+
+<td style="text-align:right;">
+
+13.44118
+
+</td>
+
+<td style="text-align:right;">
+
+11.36000
+
+</td>
+
+<td style="text-align:right;">
+
+11.70213
+
+</td>
+
+<td style="text-align:right;">
+
+14.25000
+
+</td>
+
+<td style="text-align:right;">
+
+11.55172
+
+</td>
+
+<td style="text-align:right;">
+
+12.78431
+
+</td>
+
+<td style="text-align:right;">
+
+11.93750
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:left;">
+
+Coffee Ice Cream
+
+</td>
+
+<td style="text-align:right;">
+
+13.77419
+
+</td>
+
+<td style="text-align:right;">
+
+14.31579
+
+</td>
+
+<td style="text-align:right;">
+
+15.38095
+
+</td>
+
+<td style="text-align:right;">
+
+15.31818
+
+</td>
+
+<td style="text-align:right;">
+
+15.21739
+
+</td>
+
+<td style="text-align:right;">
+
+12.26316
+
+</td>
+
+<td style="text-align:right;">
+
+13.83333
+
+</td>
+
+</tr>
+
+</tbody>
+
+</table>
+
+**`Pink Lady Apples`, on average, are ordered the earliest on Mondays at
+`11.36` hours and the latest on Wednesdays at `14.25` hours. `Coffee Ice
+Cream`, on average, is ordered the earliest on Fridays at `12.26` hours
+and the latest on Tuesdays at `15.38` hours.**
