--- a/p8105_hw3_kpc2124.Rmd
+++ b/p8105_hw3_kpc2124.Rmd
@@ -34,6 +34,7 @@ library(knitr)
 options(kableExtra.latex.load_packages = FALSE)
 library(kableExtra)
 library(viridis)
+library(ggridges)
 
 knitr::opts_chunk$set(
 	echo = TRUE,
@@ -61,7 +62,7 @@ library(p8105.datasets)
 data("instacart")
 ```
 
-The `instacart` data set has `r nrow(instacart)` observations and `r ncol(instacart)` variables, which gives `r nrow(instacart) * ncol(instacart)` distinct datapoints. Some key variables of this dataset are: **`r colnames(instacart)[1]`**, which ensures all items ordered are associated with the same order, **`r colnames(instacart)[5]`**, who placed the order, **`r colnames(instacart)[11]`**, what product was ordered, and **`r colnames(instacart)[15]`**, what department the product is from. The most orders made by a customer is **`r max(instacart[7])`**. The most popular item ordered is **`r names(which.max(table(instacart[11])))`**.
+The `instacart` data set has **`r nrow(instacart)`** observations and **`r ncol(instacart)`** variables, which gives **`r nrow(instacart) * ncol(instacart)`** distinct datapoints. Some key variables of this dataset are: **`r colnames(instacart)[1]`**, which ensures all items ordered are associated with the same order, **`r colnames(instacart)[5]`**, who placed the order, **`r colnames(instacart)[11]`**, what product was ordered, and **`r colnames(instacart)[15]`**, what department the product is from. The most orders made by a customer is **`r max(instacart[7])`**. The most popular item ordered is **`r names(which.max(table(instacart[11])))`**.
 
 ## Problem 1a: How many aisles are there, and which aisles are the most items ordered from?
 
@@ -165,5 +166,84 @@ instacart %>%
 
 **`Pink Lady Apples`, on average, are ordered the earliest on Mondays at `11.36` hours and the latest on Wednesdays at `14.25` hours. `Coffee Ice Cream`, on average, is ordered the earliest on Fridays at `12.26` hours and the latest on Tuesdays at `15.38` hours.**
 
+# Problem 2
+
+```{r, include = FALSE}
+library(p8105.datasets)
+data("brfss_smart2010")
+```
+
+## Data Cleaning
+
+```{r}
+brfss_df = 
+  brfss_smart2010 %>%
+  janitor::clean_names() %>%
+  filter(topic == "Overall Health") %>%
+  arrange(factor(response, levels =  c("Poor","Fair","Good","Very good","Excellent")))
+```
+
+## Problem 2a: In 2002, which states were observed at 7 or more locations? What about in 2010?
+
+```{r}
+brfss_df %>%
+  filter(year == 2002) %>%
+  distinct(locationabbr,locationdesc) %>%
+  count(locationabbr) %>%
+  filter(n >= 7)
+```
+
+**In 2002, `Connecticut, Florida, Massachusetts, North Carolina, New Jersey, and Pennsylvania` were observed at 7 or more locations.**
+
+```{r}
+brfss_df %>%
+  filter(year == 2010) %>%
+  distinct(locationabbr,locationdesc) %>%
+  count(locationabbr) %>%
+  filter(n >= 7)
+```
+
+**In 2010, `California, Colorado, Flordia, Massachusetts, Maryland, North Carolina, Nebraska, New Jersey, New York, Ohio, Pennsylvania, South Carolina, Texas, and Washington` were observed at 7 or more locations.**
+
+## Problem 2b: Construct a dataset that is limited to Excellent responses, and contains, year, state, and a variable that averages the data_value across locations within a state. Make a “spaghetti” plot of this average value over time within a state (that is, make a plot showing a line for each state across years – the geom_line geometry and group aesthetic will help).
+
+```{r}
+brfss_df %>%
+  filter(response == "Excellent") %>%
+  select(year,locationabbr,data_value) %>%
+  group_by(year,locationabbr) %>%
+  mutate(avg_data_value = mean(data_value)) %>%
+  ggplot(aes(x = year, y = avg_data_value, color = locationabbr)) +
+  geom_line(size = 1.25, alpha = 0.8) +
+  labs(
+    title = "Mean Prevalence of Landlines Over Time, by State",
+    x = "Year",
+    y = "Average Prevalence of Landlines",
+    caption = "BRFSS data") +
+  theme(
+   legend.position = "right")
+```
+
+**Given that we are observing the mean data value across time for all states in this dataset, it is difficult to see if there are any trends of prevalence of landline telephones over time unless we focus on individual states or on a smaller subset of states.**
+
+## Problem 2c: Make a two-panel plot showing, for the years 2006, and 2010, distribution of data_value for responses (“Poor” to “Excellent”) among locations in NY State.
+
+```{r}
+brfss_df %>%
+  filter(year %in% c(2006, 2010), locationabbr == "NY") %>%
+  ggplot((aes(x = reorder(response,desc(display_order)), y = data_value, fill = locationdesc))) +
+  geom_col(position = "dodge") + 
+  labs(
+    title = "Prevalence of Landlines in NY State in 2006 and 2010, by Location",
+    x = "Response to 'How is your general health?'",
+    y = "Prevalence of Landlines",
+    caption = "BRFSS data") +
+  facet_grid(~year) +
+  theme(legend.position = "right") +
+  scale_y_continuous(
+    breaks = c(10,15,20,25,30,35,40,45))
+```
+
+**The distribution of data_value (the prevalence of landlines) for responses among locations in NY State seem to follow similar patterns between 2006 and 2010. The prevalence of landlines was lowest among those who responded that their general health was poor across all locations in 2006 and 2010, followed by "Fair" and "Excellent" responses. Depending on location, the prevalence of landlines was highest in those who responded "Good" or "Very good".**
 
 
