--- a/p8105_hw3_kpc2124.md
+++ b/p8105_hw3_kpc2124.md
@@ -47,10 +47,10 @@ variables of this dataset are: **order\_id**, which ensures all items
 ordered are associated with the same order, **user\_id**, who placed the
 order, **product\_name**, what product was ordered, and **department**,
 what department the product is from. The most orders made by a customer
-is **100**. The most popular item ordered is
-**Banana**.
+is **100**. The most popular item ordered is **Banana**.
 
-## Problem 1a: How many aisles are there, and which aisles are the most items ordered from?
+*1a: How many aisles are there, and which aisles are the most items
+ordered from?*
 
 ``` r
 count_aisles = instacart %>%
@@ -63,10 +63,11 @@ most_items_aisle = instacart %>%
 ```
 
 **There are 134 aisles total. The aisle with the most items ordered is
-fresh vegetables with a total of 150609 items ordered from that
-aisle.**
+fresh vegetables with a total of 150609 items ordered from that aisle.**
 
-## Problem 1b: Make a plot that shows the number of items ordered in each aisle, limiting this to aisles with more than 10000 items ordered. Arrange aisles sensibly, and organize your plot so others can read it.
+*1b: Make a plot that shows the number of items ordered in each aisle,
+limiting this to aisles with more than 10000 items ordered. Arrange
+aisles sensibly, and organize your plot so others can read it.*
 
 ``` r
 instacart_plot = instacart %>% 
@@ -104,10 +105,12 @@ instacart_plot
 Out of these 39 aisles, the `butter` aisle had the least items ordered,
 while `fresh fruits` and `fresh vegetables` had over 150,000 items
 ordered, far surpassing the 3rd ranked aisle, which was `packaged
-vegetables fruits`, with 78,493 items
-ordered.**
+vegetables fruits`, with 78,493 items ordered.**
 
-## Problem 1c: Make a table showing the three most popular items in each of the aisles “baking ingredients”, “dog food care”, and “packaged vegetables fruits”. Include the number of times each item is ordered in your table.
+*1c: Make a table showing the three most popular items in each of the
+aisles “baking ingredients”, “dog food care”, and “packaged vegetables
+fruits”. Include the number of times each item is ordered in your
+table.*
 
 ``` r
 instacart %>%
@@ -433,10 +436,11 @@ Organic Blueberries
 items are `Snack Sticks Chicken & Rice Recipe Dog Treats` `Organix
 Chicken & Brown Rice Recipe`, and `Small Dog Biscuits`. The 3 most
 popular `Packaged Vegetables Fruits` items are `Organic Baby Spinach`,
-`Organic Raspberries`, and `Organic
-Blueberries`.**
+`Organic Raspberries`, and `Organic Blueberries`.**
 
-## Problem 1d: Make a table showing the mean hour of the day at which Pink Lady Apples and Coffee Ice Cream are ordered on each day of the week; format this table for human readers (i.e. produce a 2 x 7 table).
+*1d: Make a table showing the mean hour of the day at which Pink Lady
+Apples and Coffee Ice Cream are ordered on each day of the week; format
+this table for human readers (i.e. produce a 2 x 7 table).*
 
 ``` r
 instacart %>%
@@ -645,7 +649,7 @@ and the latest on Tuesdays at `15.38` hours.**
 
 # Problem 2
 
-## Data Cleaning
+*Data Cleaning*
 
 ``` r
 brfss_df = 
@@ -655,7 +659,8 @@ brfss_df =
   arrange(factor(response, levels =  c("Poor","Fair","Good","Very good","Excellent")))
 ```
 
-## Problem 2a: In 2002, which states were observed at 7 or more locations? What about in 2010?
+*2a: In 2002, which states were observed at 7 or more locations? What
+about in 2010?*
 
 ``` r
 brfss_df %>%
@@ -664,16 +669,6 @@ brfss_df %>%
   count(locationabbr) %>%
   filter(n >= 7)
 ```
-
-    ## # A tibble: 6 x 2
-    ##   locationabbr     n
-    ##   <chr>        <int>
-    ## 1 CT               7
-    ## 2 FL               7
-    ## 3 MA               8
-    ## 4 NC               7
-    ## 5 NJ               8
-    ## 6 PA              10
 
 **In 2002, `Connecticut, Florida, Massachusetts, North Carolina, New
 Jersey, and Pennsylvania` were observed at 7 or more locations.**
@@ -686,30 +681,17 @@ brfss_df %>%
   filter(n >= 7)
 ```
 
-    ## # A tibble: 14 x 2
-    ##    locationabbr     n
-    ##    <chr>        <int>
-    ##  1 CA              12
-    ##  2 CO               7
-    ##  3 FL              41
-    ##  4 MA               9
-    ##  5 MD              12
-    ##  6 NC              12
-    ##  7 NE              10
-    ##  8 NJ              19
-    ##  9 NY               9
-    ## 10 OH               8
-    ## 11 PA               7
-    ## 12 SC               7
-    ## 13 TX              16
-    ## 14 WA              10
-
 **In 2010, `California, Colorado, Flordia, Massachusetts, Maryland,
 North Carolina, Nebraska, New Jersey, New York, Ohio, Pennsylvania,
 South Carolina, Texas, and Washington` were observed at 7 or more
 locations.**
 
-## Problem 2b: Construct a dataset that is limited to Excellent responses, and contains, year, state, and a variable that averages the data\_value across locations within a state. Make a “spaghetti” plot of this average value over time within a state (that is, make a plot showing a line for each state across years – the geom\_line geometry and group aesthetic will help).
+*2b: Construct a dataset that is limited to Excellent responses, and
+contains, year, state, and a variable that averages the data\_value
+across locations within a state. Make a “spaghetti” plot of this average
+value over time within a state (that is, make a plot showing a line for
+each state across years – the geom\_line geometry and group aesthetic
+will help).*
 
 ``` r
 brfss_df %>%
@@ -733,10 +715,11 @@ brfss_df %>%
 **Given that we are observing the mean data value across time for all
 states in this dataset, it is difficult to see if there are any trends
 of prevalence of landline telephones over time unless we focus on
-individual states or on a smaller subset of
-states.**
+individual states or on a smaller subset of states.**
 
-## Problem 2c: Make a two-panel plot showing, for the years 2006, and 2010, distribution of data\_value for responses (“Poor” to “Excellent”) among locations in NY State.
+*2c: Make a two-panel plot showing, for the years 2006, and 2010,
+distribution of data\_value for responses (“Poor” to “Excellent”) among
+locations in NY State.*
 
 ``` r
 brfss_df %>%
@@ -763,3 +746,1122 @@ those who responded that their general health was poor across all
 locations in 2006 and 2010, followed by “Fair” and “Excellent”
 responses. Depending on location, the prevalence of landlines was
 highest in those who responded “Good” or “Very good”.**
+
+# Problem 3
+
+*3a: Load, tidy, and otherwise wrangle the data. Your final dataset
+should include all originally observed variables and values; have useful
+variable names; include a weekday vs weekend variable; and encode data
+with reasonable variable classes. Describe the resulting dataset
+(e.g. what variables exist, how many observations, etc).*
+
+``` r
+accel_data = read_csv("./data/accel_data.csv", col_types = cols(
+  week = col_integer(),
+  day_id = col_integer()
+)) %>%
+  janitor::clean_names() %>%
+  pivot_longer(
+    activity_1:activity_1440,
+    names_to = "activity",
+    names_prefix = "activity_",
+    names_ptypes = list(activity = integer()),
+    values_to = "counts"
+  ) %>% 
+  mutate(day_of_week = ifelse(day %in% c("Saturday","Sunday"),"weekend","weekday"))
+```
+
+**The variables in this dataset are week, day\_id, day, activity,
+counts, day\_of\_week There are 50400 rows and 6 columns for a total of
+302400 observations. This patient was observed for 35 days and had a
+mean activity count of 267.04 per minute.**
+
+*3b: Traditional analyses of accelerometer data focus on the total
+activity over the day. Using your tidied dataset, aggregate across
+minutes to create a total activity variable for each day, and create a
+table showing these totals. Are any trends apparent?*
+
+``` r
+accel_data %>%
+  mutate(
+    day = factor(day, levels = c("Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", ordered = TRUE)),
+    day_num = as.integer(day)
+  ) %>%
+  group_by(week, day_num) %>%
+  mutate(total_activity = sum(counts)) %>%
+  ungroup() %>%
+  arrange(week,day_num) %>%
+  distinct(week,day,total_activity,day_of_week) %>%
+  kable(
+    caption = "Total Daily Activity over 5 weeks",
+    col.names = c("Week",
+                  "Day",
+                  "Total Activity",
+                  "Weekday/Weekend")
+    )
+```
+
+<table>
+
+<caption>
+
+Total Daily Activity over 5 weeks
+
+</caption>
+
+<thead>
+
+<tr>
+
+<th style="text-align:right;">
+
+Week
+
+</th>
+
+<th style="text-align:left;">
+
+Day
+
+</th>
+
+<th style="text-align:right;">
+
+Total Activity
+
+</th>
+
+<th style="text-align:left;">
+
+Weekday/Weekend
+
+</th>
+
+</tr>
+
+</thead>
+
+<tbody>
+
+<tr>
+
+<td style="text-align:right;">
+
+1
+
+</td>
+
+<td style="text-align:left;">
+
+Sunday
+
+</td>
+
+<td style="text-align:right;">
+
+631105.00
+
+</td>
+
+<td style="text-align:left;">
+
+weekend
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:right;">
+
+1
+
+</td>
+
+<td style="text-align:left;">
+
+Monday
+
+</td>
+
+<td style="text-align:right;">
+
+78828.07
+
+</td>
+
+<td style="text-align:left;">
+
+weekday
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:right;">
+
+1
+
+</td>
+
+<td style="text-align:left;">
+
+Tuesday
+
+</td>
+
+<td style="text-align:right;">
+
+307094.24
+
+</td>
+
+<td style="text-align:left;">
+
+weekday
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:right;">
+
+1
+
+</td>
+
+<td style="text-align:left;">
+
+Wednesday
+
+</td>
+
+<td style="text-align:right;">
+
+340115.01
+
+</td>
+
+<td style="text-align:left;">
+
+weekday
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:right;">
+
+1
+
+</td>
+
+<td style="text-align:left;">
+
+Thursday
+
+</td>
+
+<td style="text-align:right;">
+
+355923.64
+
+</td>
+
+<td style="text-align:left;">
+
+weekday
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:right;">
+
+1
+
+</td>
+
+<td style="text-align:left;">
+
+Friday
+
+</td>
+
+<td style="text-align:right;">
+
+480542.62
+
+</td>
+
+<td style="text-align:left;">
+
+weekday
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:right;">
+
+1
+
+</td>
+
+<td style="text-align:left;">
+
+Saturday
+
+</td>
+
+<td style="text-align:right;">
+
+376254.00
+
+</td>
+
+<td style="text-align:left;">
+
+weekend
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:right;">
+
+2
+
+</td>
+
+<td style="text-align:left;">
+
+Sunday
+
+</td>
+
+<td style="text-align:right;">
+
+422018.00
+
+</td>
+
+<td style="text-align:left;">
+
+weekend
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:right;">
+
+2
+
+</td>
+
+<td style="text-align:left;">
+
+Monday
+
+</td>
+
+<td style="text-align:right;">
+
+295431.00
+
+</td>
+
+<td style="text-align:left;">
+
+weekday
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:right;">
+
+2
+
+</td>
+
+<td style="text-align:left;">
+
+Tuesday
+
+</td>
+
+<td style="text-align:right;">
+
+423245.00
+
+</td>
+
+<td style="text-align:left;">
+
+weekday
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:right;">
+
+2
+
+</td>
+
+<td style="text-align:left;">
+
+Wednesday
+
+</td>
+
+<td style="text-align:right;">
+
+440962.00
+
+</td>
+
+<td style="text-align:left;">
+
+weekday
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:right;">
+
+2
+
+</td>
+
+<td style="text-align:left;">
+
+Thursday
+
+</td>
+
+<td style="text-align:right;">
+
+474048.00
+
+</td>
+
+<td style="text-align:left;">
+
+weekday
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:right;">
+
+2
+
+</td>
+
+<td style="text-align:left;">
+
+Friday
+
+</td>
+
+<td style="text-align:right;">
+
+568839.00
+
+</td>
+
+<td style="text-align:left;">
+
+weekday
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:right;">
+
+2
+
+</td>
+
+<td style="text-align:left;">
+
+Saturday
+
+</td>
+
+<td style="text-align:right;">
+
+607175.00
+
+</td>
+
+<td style="text-align:left;">
+
+weekend
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:right;">
+
+3
+
+</td>
+
+<td style="text-align:left;">
+
+Sunday
+
+</td>
+
+<td style="text-align:right;">
+
+467052.00
+
+</td>
+
+<td style="text-align:left;">
+
+weekend
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:right;">
+
+3
+
+</td>
+
+<td style="text-align:left;">
+
+Monday
+
+</td>
+
+<td style="text-align:right;">
+
+685910.00
+
+</td>
+
+<td style="text-align:left;">
+
+weekday
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:right;">
+
+3
+
+</td>
+
+<td style="text-align:left;">
+
+Tuesday
+
+</td>
+
+<td style="text-align:right;">
+
+381507.00
+
+</td>
+
+<td style="text-align:left;">
+
+weekday
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:right;">
+
+3
+
+</td>
+
+<td style="text-align:left;">
+
+Wednesday
+
+</td>
+
+<td style="text-align:right;">
+
+468869.00
+
+</td>
+
+<td style="text-align:left;">
+
+weekday
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:right;">
+
+3
+
+</td>
+
+<td style="text-align:left;">
+
+Thursday
+
+</td>
+
+<td style="text-align:right;">
+
+371230.00
+
+</td>
+
+<td style="text-align:left;">
+
+weekday
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:right;">
+
+3
+
+</td>
+
+<td style="text-align:left;">
+
+Friday
+
+</td>
+
+<td style="text-align:right;">
+
+467420.00
+
+</td>
+
+<td style="text-align:left;">
+
+weekday
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:right;">
+
+3
+
+</td>
+
+<td style="text-align:left;">
+
+Saturday
+
+</td>
+
+<td style="text-align:right;">
+
+382928.00
+
+</td>
+
+<td style="text-align:left;">
+
+weekend
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:right;">
+
+4
+
+</td>
+
+<td style="text-align:left;">
+
+Sunday
+
+</td>
+
+<td style="text-align:right;">
+
+260617.00
+
+</td>
+
+<td style="text-align:left;">
+
+weekend
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:right;">
+
+4
+
+</td>
+
+<td style="text-align:left;">
+
+Monday
+
+</td>
+
+<td style="text-align:right;">
+
+409450.00
+
+</td>
+
+<td style="text-align:left;">
+
+weekday
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:right;">
+
+4
+
+</td>
+
+<td style="text-align:left;">
+
+Tuesday
+
+</td>
+
+<td style="text-align:right;">
+
+319568.00
+
+</td>
+
+<td style="text-align:left;">
+
+weekday
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:right;">
+
+4
+
+</td>
+
+<td style="text-align:left;">
+
+Wednesday
+
+</td>
+
+<td style="text-align:right;">
+
+434460.00
+
+</td>
+
+<td style="text-align:left;">
+
+weekday
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:right;">
+
+4
+
+</td>
+
+<td style="text-align:left;">
+
+Thursday
+
+</td>
+
+<td style="text-align:right;">
+
+340291.00
+
+</td>
+
+<td style="text-align:left;">
+
+weekday
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:right;">
+
+4
+
+</td>
+
+<td style="text-align:left;">
+
+Friday
+
+</td>
+
+<td style="text-align:right;">
+
+154049.00
+
+</td>
+
+<td style="text-align:left;">
+
+weekday
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:right;">
+
+4
+
+</td>
+
+<td style="text-align:left;">
+
+Saturday
+
+</td>
+
+<td style="text-align:right;">
+
+1440.00
+
+</td>
+
+<td style="text-align:left;">
+
+weekend
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:right;">
+
+5
+
+</td>
+
+<td style="text-align:left;">
+
+Sunday
+
+</td>
+
+<td style="text-align:right;">
+
+138421.00
+
+</td>
+
+<td style="text-align:left;">
+
+weekend
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:right;">
+
+5
+
+</td>
+
+<td style="text-align:left;">
+
+Monday
+
+</td>
+
+<td style="text-align:right;">
+
+389080.00
+
+</td>
+
+<td style="text-align:left;">
+
+weekday
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:right;">
+
+5
+
+</td>
+
+<td style="text-align:left;">
+
+Tuesday
+
+</td>
+
+<td style="text-align:right;">
+
+367824.00
+
+</td>
+
+<td style="text-align:left;">
+
+weekday
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:right;">
+
+5
+
+</td>
+
+<td style="text-align:left;">
+
+Wednesday
+
+</td>
+
+<td style="text-align:right;">
+
+445366.00
+
+</td>
+
+<td style="text-align:left;">
+
+weekday
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:right;">
+
+5
+
+</td>
+
+<td style="text-align:left;">
+
+Thursday
+
+</td>
+
+<td style="text-align:right;">
+
+549658.00
+
+</td>
+
+<td style="text-align:left;">
+
+weekday
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:right;">
+
+5
+
+</td>
+
+<td style="text-align:left;">
+
+Friday
+
+</td>
+
+<td style="text-align:right;">
+
+620860.00
+
+</td>
+
+<td style="text-align:left;">
+
+weekday
+
+</td>
+
+</tr>
+
+<tr>
+
+<td style="text-align:right;">
+
+5
+
+</td>
+
+<td style="text-align:left;">
+
+Saturday
+
+</td>
+
+<td style="text-align:right;">
+
+1440.00
+
+</td>
+
+<td style="text-align:left;">
+
+weekend
+
+</td>
+
+</tr>
+
+</tbody>
+
+</table>
+
+**On first glance, it appears as though this patient is more active on
+Fridays and weekends, however, in the later weeks, this pattern
+dissipates and total daily activity varies more.**
+
+*3c: Accelerometer data allows the inspection activity over the course
+of the day. Make a single-panel plot that shows the 24-hour activity
+time courses for each day and use color to indicate day of the week.
+Describe in words any patterns or conclusions you can make based on this
+graph.*
+
+``` r
+accel_data %>%
+  mutate(
+    day = ordered(day,levels = c("Sunday", "Monday", 
+    "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"))) %>%
+  ggplot(aes(x = activity, y = counts, color = day)) +
+  geom_smooth(size = 2) +
+  labs(
+    title = "Average 24-hour Activity Course, by Day",
+    x = "Hour",
+    y = "Average Hourly Activity",
+    caption = "Data from CUMC") +
+  theme(
+    legend.position = "right",
+    panel.grid.major.x = element_line(color = "grey50")
+  ) + 
+  scale_colour_discrete(name = "Day of the Week") +
+  scale_x_continuous(
+  breaks = c(60,120,180,240,300,360,420,480,540,600,660,720,780,840,900,960,1020,1080,1140,1200,1260,1320,1380,1440), 
+  labels = c("1","2","3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18","19","20","21","22","23","24"))
+```
+
+<img src="p8105_hw3_kpc2124_files/figure-gfm/unnamed-chunk-14-1.png" width="90%" />
+
+**On average, there was a period of high activity on Friday nights,
+peaking around 9-9:30pm. On Sundays, there was a period of high activity
+that peaked around 10:30-11am. On average, Saturdays appear to have the
+least amount of activity across the 5 weeks.**
